--- a/CSS-Basics/Basic-Exercises/Exercise-2/style.css
+++ b/CSS-Basics/Basic-Exercises/Exercise-2/style.css
@@ -1,6 +1,6 @@
 .par {
     background-color:rgb(131, 131, 225);
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 } 
 #num2{
     color: #4D2D73;
