--- a/CSS-Basics/Basic-Exercises/Exercise-5/style.css
+++ b/CSS-Basics/Basic-Exercises/Exercise-5/style.css
@@ -1,1 +1,10 @@
-cccccccccccc
+/* div{
+background-color: yellow;
+font-size: 20px;
+text-align: center;
+} */
+.container .text{
+background-color: yellow;
+font-size: 20px;
+text-align: center;
+}
